--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "escape-string-regexp": "^1.0.5",
     "fake-useragent": "^1.0.1",
     "fluent-ffmpeg": "^2.1.2",
+    "image-to-base64": "^2.1.1",
     "imgbb-uploader": "^1.1.0",
     "lolis.life": "^4.0.0",
     "moment-timezone": "^0.5.32",
